--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
       <nav class="nav-menu">
         <ul>
           <li class="active"><a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <li><a href="#about"><i class="bx bx-user"></i> <span>Acerca de mí</span></a></li>
+          <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resumen</span></a></li>
           <li><a href="#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li>
-          <li><a href="#services"><i class="bx bx-server"></i> Services</a></li>
-          <li><a href="#contact"><i class="bx bx-envelope"></i> Contact</a></li>
+          <li><a href="#services"><i class="bx bx-server"></i> Servicios</a></li>
+          <li><a href="#contact"><i class="bx bx-envelope"></i> Contactos</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -75,7 +75,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Cristian Gaona</h1>
-      <p>I'm <span class="typed" data-typed-items="Developer, Freelancer, Photographer"></span></p>
+      <p>Soy <span class="typed" data-typed-items="Desarrollador, Freelancer, Potográfo"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -86,8 +86,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Acerca de mí</h2>
+          <p>Mi nombre es Cristian Gaona, soy estudiante de Ingeniería en Sistemas Informáticos y Computación en la Universidad Técnica Particular de Loja, llevo 4 años de experiencia en desarrollo de software</p>
         </div>
 
         <div class="row">
