Corrigiendo divs y agregando foto de perfil

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Desarrollador Backend</h3>
-            <p class="font-italic">
+            <h3>Desarrollador Back-End</h3>
+           <p class="font-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua.
             </p>
@@ -109,7 +109,7 @@
                   <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Celular:</strong> +593 985880290</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Ciudad:</strong> Loja</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Pais:</strong> ECUADOR</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Pais:</strong> Ecuador</li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -132,7 +132,7 @@
     </section><!-- End About Section -->
 
     <!-- ======= Facts Section ======= -->
-    <section id="facts" class="facts">
+    <!--<section id="facts" class="facts">
       <div class="container">
 
         <div class="section-title">
@@ -177,7 +177,8 @@
         </div>
 
       </div>
-    </section><!-- End Facts Section -->
+    </section>-->
+    <!-- End Facts Section --> 
 
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
@@ -308,7 +309,7 @@
             <h3 class="resume-title">Resumen</h3>
             <div class="resume-item pb-0">
               <h4>Cristian Gaona</h4>
-              <p><em>Me gusta estar en contante aprendizaje y capcitación en tecnologías emergentes, a la vez dominar y experimentar algunas de ellas, me considero una persona autodidácta y me gusta trabajar en colaboración con otras personas, todo lo que aprendo trato de compartirlo con los demás y así también aprender de ellas, ultimamente me estoy dedicando a crear contenido sobre algunas tecnologías importantes y compartirlas con todas las personas a través de mi <a href="https://n9.cl/18tt6" target ="_blank"> canal de Youtube</a></em></p>
+              <p><em>Me gusta estar en constante aprendizaje y capacitación en tecnologías emergentes, a la vez dominar y experimentar algunas de ellas, me considero una persona autodidácta y me gusta trabajar en colaboración con otras personas, todo lo que aprendo trato de compartirlo con los demás y así también aprender de ellas, ultimamente me estoy dedicando a crear contenido sobre algunas tecnologías importantes y compartirlas con todas las personas a través de mi <a href="https://n9.cl/18tt6" target ="_blank"> canal de Youtube</a></em></p>
               <ul>
                 <li>Loja, Ecuador</li>
                 <li>+593 985880290</li>
@@ -352,7 +353,7 @@
               <h5>jul 2020 - oct 2020</h5>
               <p><em>UPTL, Factoría de contenidos, EDILOJA CÍA. LTDA. </em></p>
               <ul>
-                <li>Virtualización de Guías dedácticas a la plataforma Canvas</li>
+                <li>Virtualización de Guías didácticas a la plataforma Canvas</li>
                 <li>Dirigir grupos de 4 personas, delegar y asesorar sobre todos los aspectos del proyecto</li>
                 <li>Control de calidad y accesibilidad de los metacursos asignados</li>
                 <li>Validación de contenidos del metacurso junto con el docente autor de la guía didáctica</li>
@@ -368,7 +369,7 @@
                 <li>Investigación de arquitetcuras emergentes y esquemas de integración</li>
                 <li>Diseño de esquema arquitectónico de integración</li>
                 <li>Desarrollo de microservicios</li>
-                <li>Despliegue en Cloud de esquema de integración y arquitetcura de microservicios</li>
+                <li>Despliegue en Cloud de esquema de integración y arquitectura de microservicios</li>
                 <li>Prototipo móvil</li>
               </ul>
             </div>
@@ -384,7 +385,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Durante mi formación academica he realizado algunos proyectos que puede ser de interés para cualquier personas</p>
+          <p>Durante mi formación academica he realizado algunos proyectos que puede ser de interés para cualquier persona</p>
         </div>
 
         <div class="row" data-aos="fade-up">
